Sat Feb  7 19:25:25 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (has_magic): always get long path name on Windows even if
	  no tilde is there.  [ruby-core:68011] [Bug #10819]

	* dir.c (replace_real_basename): FindFirstFile ignore redirection
	  character, check if exists before call it.  cf. [Bug #8597]

Sat Feb  7 13:30:11 2015  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole_record.rb
	  (test_ole_instance_variable_get): correct VT_RECORD type and
	  instance variables.

Fri Feb  6 17:47:05 2015  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: register nodes when
	  dumping objects with custom coders. [ruby-core:66215] [Bug #10496]

	* test/psych/test_coder.rb: test for fix

Fri Feb  6 16:58:31 2015  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: fix support for regular
	  expressions with newlines. tenderlove/psych#222

	* test/psych/test_yaml.rb: test for change.

Fri Feb  6 10:31:50 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (rb_call_info_kw_arg_struct): make keywords a symbols
	  list to get rid of inadvertent creation by variable keyword
	  arguments.  [ruby-core:68031] [Bug #10831]

Thu Feb  5 22:42:34 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rubygems:  Update to RubyGems HEAD(5c3b6f3).
	  Fixed #1156, #1142, #1115, #1142, #1139 on rubygems/rubygems
	* test/rubygems:  ditto.

Thu Feb  5 13:41:01 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (send_internal), vm_insnhelper.c (vm_call_opt_send):
	  convert String method name into a Symbol, as method_missing
	  method expects its first argument to be a Symbol.  [Bug #10828]

	* vm_insnhelper.c (ci_missing_reason): return the reason of method
	  missing in call info.

	* vm_insnhelper.c (vm_call_opt_send): re-apply r49500 with the
	  proper missing reason.  [Bug #10828]

Thu Feb  5 10:31:46 2015  Shugo Maeda  <shugo@ruby-lang.org>
